# venom

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
benchmark/: README.md  energy.py  native_scripting.py  run_ablation1.sh  run_ablation2.sh  run_baseline_a.sh  run_baseline_b.sh  run_spmm_spatha.sh
cmake/: Cuda.cmake  Dependencies.cmake
end2end/: bert_pytorch.py  gpt2_pytorch.py  gpt3_pytorch.py  grouped_nmv_tensor.py  install.sh  install_v64.sh  run_inference.sh  run_inference_profile.sh  setup.py  setup_v64.py  tests.ipynb
end2end/spatha_mod/block_sparse/: CMakeLists.txt  Makefile  cuda_array.h  cuda_error.h
end2end/spatha_mod/block_sparse/api/: CMakeLists.txt  spatha.cu
end2end/spatha_mod/block_sparse/benchmark/: Makefile  argparse_util.h  bench.py  benchmark.spmm_nm.cu  get_best.py  timing_util.h
end2end/spatha_mod/block_sparse/common/: base.h  epilogue.h  library_util.h  mma.h
end2end/spatha_mod/block_sparse/spmm/: CMakeLists.txt  blockwise_format.h  blockwise_kernel.h  blockwise_library.cu  blockwise_library_v64.cu  blockwise_op.h  spmm_library_decl.h  spmm_op.h
end2end/spatha_mod/block_sparse/util/: CMakeLists.txt  random_mask.cc  random_mask.h
include/spatha/: .gitignore  README.md
include/spatha/block_sparse/: CMakeLists.txt  cuda_array.h
include/spatha/block_sparse/benchmark/: CMakeLists.txt
include/spatha/block_sparse/cmake/: Dependencies.cmake
include/spatha/block_sparse/common/: epilogue.h  memcpy.h  mma.h  swizzle.h  vector.h
include/spatha/block_sparse/spmm/: CMakeLists.txt  blockwise_format_origin.h  blockwise_kernel.h  blockwise_library.cu  blockwise_op.h  spmm_library_decl.h  spmm_op.h
include/spatha/block_sparse/util/: CMakeLists.txt  random_mask.cc  random_mask.h
plot/: energy.py  run_ablation1.py  run_ablation2.py  run_baseline_a.py  run_baseline_b.py  run_inference.py  run_inference_profile.py  run_spmm_spatha.py
result/: ablation1.csv  ablation2.csv  baseline_a.csv  baseline_b.csv  inference.csv  spmm_bert_spatha.csv
sparseml/: README.md  sparseml.yml  sparseml_SS1.sh  sparseml_SS2.sh  sparseml_SS3.sh
sparseml/docs/api/: sparseml.onnx.optim.rst
sparseml/integrations/huggingface-transformers/recipes/: 30epochs_8block75_squad.yaml  30epochs_8block875_squad.yaml  oBERT_216_gradual.yaml  oBERT_216v128_gradual.yaml  oBERT_216v64_gradual.yaml  oBERT_28_gradual.yaml  oBERT_28v128_gradual.yaml  oBERT_28v64_gradual.yaml  obs_216_gradual_pair.yaml  obs_216v128_gradual_pair.yaml  obs_216v64_gradual_pair.yaml  obs_28_gradual.yaml  obs_28_gradual_pair.yaml  obs_28v128_gradual_pair.yaml  obs_28v64_gradual_pair.yaml  oneshot_oBERT_216.yaml  oneshot_oBERT_216v128.yaml  oneshot_oBERT_216v64.yaml  oneshot_oBERT_28.yaml  oneshot_oBERT_28v128.yaml  oneshot_oBERT_28v64.yaml
sparseml/integrations/huggingface-transformers/scripts/: 30epochs_gradual_pruning_squad_block8.sh  30epochs_gradual_pruning_squad_block8_875.sh  oBERT216_squad.sh  oBERT216_squad_gradual.sh  oBERT216v128_squad_gradual.sh  oBERT216v64_squad_gradual.sh  oBERT28_squad.sh  oBERT28_squad_gradual.sh  oBERT28v128_squad_gradual.sh  oBERT28v64_squad_gradual.sh  oBERTnm16v128_squad.sh  oBERTnm16v64_squad.sh  oBERTnm8v128_squad.sh  oBERTnm8v64_squad.sh  obs216_squad_gradual_pair.sh  obs216v128_squad_gradual_pair.sh  obs216v64_squad_gradual_pair.sh  obs28_squad_gradual_pair.sh  obs28v128_squad_gradual_pair.sh  obs28v64_squad_gradual_pair.sh
sparseml/src/sparseml/pytorch/sparsification/pruning/: __init__.py  mask_creator.py  modifier_pruning_216_pairwise_obs.py  modifier_pruning_216_pairwise_obs_v128.py  modifier_pruning_216_pairwise_obs_v64.py  modifier_pruning_28_pairwise_obs.py  modifier_pruning_28_pairwise_obs_v128.py  modifier_pruning_28_pairwise_obs_v64.py  modifier_pruning_nm_pairwise_obs_v_MP.py  modifier_pruning_obs.py  modifier_pruning_obs_216.py  modifier_pruning_obs_216_gradual.py  modifier_pruning_obs_216v128.py  modifier_pruning_obs_216v128_gradual.py  modifier_pruning_obs_216v64.py  modifier_pruning_obs_216v64_gradual.py  modifier_pruning_obs_28.py  modifier_pruning_obs_28_gradual.py  modifier_pruning_obs_28v128.py  modifier_pruning_obs_28v128_gradual.py  modifier_pruning_obs_28v64.py  modifier_pruning_obs_28v64_gradual.py
sparseml/src/sparseml/utils/: helpers.py
src/: CMakeLists.txt  benchmark_spmm.cpp  cuda_utils.h
src/dataset/: CMakeLists.txt  dataset.cpp  dataset.hpp
src/format/: CMakeLists.txt  format.cpp  format.hpp  format_csr.cpp  format_csr.hpp  format_cvs.cpp  format_cvs.hpp  format_cxx.cpp  format_cxx.hpp  format_sr_nm.cpp  format_sr_nm.hpp
src/gemm/: CMakeLists.txt  cublasLt_gemm.cpp  cublasLt_gemm.hpp  cublas_gemm.cpp  cublas_gemm.hpp  gemm.cpp  gemm.hpp
src/spmm/: CMakeLists.txt  clasp_spmm.cpp  clasp_spmm.hpp  cusparseLt_spmm.cpp  cusparseLt_spmm.hpp  spatha_spmm.cpp  spatha_spmm.hpp  spmm.cpp  spmm.hpp  sputnik_spmm.cpp  sputnik_spmm.hpp
src/util/: argparse.h  matrix_utils.h  utils.h
